[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["Rohit Bhandari <jainrohit090@gmail.com>"]
description = "A key-value store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.7"
predicates = "2.1.5"
clap = { version = "4.0.32", features = ["derive"] }
